# mono

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mono-todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml
everything/client/: package.json  vite.config.ts
everything/service/: Cargo.toml  spin.toml
everything/service/src/: lib.rs
friday-core/: tauri.conf.json
friday-ui/: package.json  pnpm-lock.yaml
mono/: Cargo.toml  index.html  tauri.conf.json
mono/src/: mono.rs
prompt-bar/: Cargo.toml  index.html  tauri.conf.json
prompt-bar/capabilities/: default.json  main.json
prompt-bar/client/: package.json  pnpm-lock.yaml
prompt-bar/client/src/: App.tsx  index.tsx
prompt-bar/lib/: app.rs  cmd.rs  error.rs  lib.rs  plugins.rs  tray.rs  window.rs
prompt-bar/src/: prompt_bar.rs
