[workspace]
members = ["mono", "prompt-bar"]

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", deafult-features = false }
tauri-build = { version = "2.0.0-rc", features = [] }
tauri-plugin-window-state = "2.0.0-beta"
thiserror = "1.0.56"
