[package]
name = "mono"
version = "0.1.0"
description = "Mono"
repository = "https://github.com/zerocore-ai/zerodb"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"
default-run = "mono"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mono"
path = "src/mono.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.22", features = ["unstable"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
