[package]
name = "mono"
version = "0.1.0"
description = "Mono"
repository = "https://github.com/zerocore-ai/mono"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"
default-run = "mono"

[[bin]]
name = "mono"
path = "src/mono.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri = { workspace = true, features = ["unstable"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
