[package]
name = "prompt-bar"
version = "0.1.0"
description = "Prompt Bar"
repository = "https://github.com/zerocore-ai/mono"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"
default-run = "prompt-bar"

[[bin]]
name = "prompt-bar"
path = "bin/prompt_bar.rs"

[lib]
name = "prompt_bar"
path = "lib/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri = { workspace = true, features = [
    "macos-private-api",
    "unstable",
    "tray-icon",
] }
thiserror.workspace = true
window-vibrancy = { version = "0.5.0" }
tauri-plugin-window-state.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
